# raytracer-cpp

./: .gitignore  LICENSE  README.md
RayTracer/: CMakeLists.txt  RayTracer.sln
RayTracer/Projectile/: Projectile.cpp  Projectile.vcxproj  Projectile.vcxproj.filters
RayTracer/RayTracerLib/: CMakeLists.txt  RayTracerLib.vcxproj  RayTracerLib.vcxproj.filters
RayTracer/RayTracerLib/include/RayTracer/: Canvas.h  Color.h  Math.h  Ray.h  Transform.h
RayTracer/RayTracerLib/src/: Canvas.cpp  Transform.cpp  Transform.cpp.bak
RayTracer/Tests/: CMakeLists.txt  CanvasTests.cpp  ColorTests.cpp  LinearAlgebraTests.cpp  MatcherTests.cpp  Matchers.h  PointVectorTest.cpp  PointVectorTests.cpp  RayTests.cpp  Tests.vcxproj  Tests.vcxproj.filters  TransformTests.cpp  pch.h
RayTracer/apps/: CMakeLists.txt
RayTracer/apps/Clock/: CMakeLists.txt  Clock.cpp
RayTracer/apps/Projectile/: CMakeLists.txt  Projectile.cpp
RayTracer/cmake/: AddGoogleTest.cmake
